# resourceschedule_device_usage_statistics

./: 1.diff  BUILD.gn  CODEOWNERS  IAppGroupCallback.idl  IBundleActiveService.idl  OAT.xml  README.en.md  README.md  README_ZH.md  README_ZH.md.bak  README_zh.md  bundle.json  device_usage_statistics.gni  libusagestatsinner.versionscript  ohos.build
frameworks/src/: app_group_observer_napi.cpp  bundle_active_app_group_napi.cpp  bundle_active_group_observer.cpp  bundle_state_common.cpp  bundle_state_init.cpp  bundle_state_query.cpp  bundle_state_query_napi.cpp  usage_statistics_init.cpp
init/: bundleactive_service.cfg  bundleactive_service.rc  device_usage_statistics_service.cfg
interfaces/innerkits/include/: app_group_callback_proxy.h  app_group_callback_stub.h  bundle_active_client.h  bundle_active_event.h  bundle_active_event_stats.h  bundle_active_form_record.h  bundle_active_group_callback_info.h  bundle_active_group_callback_proxy.h  bundle_active_group_callback_stub.h  bundle_active_group_map.h  bundle_active_high_frequency_period.h  bundle_active_module_record.h  bundle_active_package_stats.h  bundle_active_proxy.h  iapp_group_callback.h  iapp_group_callback_ipc_interface_code.h  ibundle_active_group_callback.h
interfaces/innerkits/src/: app_group_callback_info.cpp  app_group_callback_proxy.cpp  app_group_callback_stub.cpp  bundle_active_client.cpp  bundle_active_event.cpp  bundle_active_event_stats.cpp  bundle_active_event_vec_raw_data.cpp  bundle_active_form_record.cpp  bundle_active_group_callback_info.cpp  bundle_active_group_callback_proxy.cpp  bundle_active_group_callback_stub.cpp  bundle_active_high_frequency_period.cpp  bundle_active_module_record.cpp  bundle_active_package_stats.cpp  bundle_active_proxy.cpp
sa_profile/: 1906.xml  1907.json  1907.xml  BUILD.gn
services/common/include/: bundle_active_account_helper.h  bundle_active_app_state_observer.h  bundle_active_binary_search.h  bundle_active_bundle_mgr_helper.h  bundle_active_common_event_subscriber.h  bundle_active_config_reader.h  bundle_active_constant.h  bundle_active_continuous_task_observer.h  bundle_active_core.h  bundle_active_debug_mode.h  bundle_active_event.h  bundle_active_event_list.h  bundle_active_event_reporter.h  bundle_active_event_stats.h  bundle_active_event_tracker.h  bundle_active_interval_stats.h  bundle_active_log.h  bundle_active_open_callback.h  bundle_active_package_stats.h  bundle_active_period_stats.h  bundle_active_power_state_callback_proxy.h  bundle_active_power_state_callback_service.h  bundle_active_power_state_callback_stub.h  bundle_active_service.h  bundle_active_shutdown_callback_proxy.h  bundle_active_shutdown_callback_service.h  bundle_active_shutdown_callback_stub.h  bundle_active_stub.h  bundle_active_usage_database.h  bundle_active_usage_stats.h  bundle_active_user_service.h  bundle_active_visibility_changed_listener.h  bundle_active_window_visibility_manager.h  ibundle_active_service.h  ibundle_active_service_ipc_interface_code.h  remote_death_recipient.h
services/common/src/: bundle_active_account_helper.cpp  bundle_active_app_state_obsever.cpp  bundle_active_binary_search.cpp  bundle_active_bundle_mgr_helper.cpp  bundle_active_config_reader.cpp  bundle_active_continuous_task_observer.cpp  bundle_active_core.cpp  bundle_active_debug_mode.cpp  bundle_active_event.cpp  bundle_active_event_list.cpp  bundle_active_event_reporter.cpp  bundle_active_event_stats.cpp  bundle_active_event_tracker.cpp  bundle_active_interval_stats.cpp  bundle_active_log.cpp  bundle_active_open_callback.cpp  bundle_active_package_stats.cpp  bundle_active_period_stats.cpp  bundle_active_power_state_callback_proxy.cpp  bundle_active_power_state_callback_service.cpp  bundle_active_power_state_callback_stub.cpp  bundle_active_service.cpp  bundle_active_shutdown_callback_proxy.cpp  bundle_active_shutdown_callback_service.cpp  bundle_active_shutdown_callback_stub.cpp  bundle_active_stub.cpp  bundle_active_usage_database.cpp  bundle_active_usage_database_upgrade.cpp  bundle_active_usage_stats.cpp  bundle_active_user_service.cpp  bundle_active_user_service.h  bundle_active_visibility_changed_listener.cpp  bundle_active_window_visibility_manager.cpp
services/include/: bundle_active_iservice.h  bundle_active_log.h  bundle_active_service.h  bundle_active_stub.h  ibundle_active_service.h
services/packagegroup/include/: bundle_active_group_common.h  bundle_active_group_controller.h  bundle_active_group_handler.h  bundle_active_group_util.h  bundle_active_package_history.h  bundle_active_user_history.h
services/packagegroup/src/: bundle_active_group_controller.cpp  bundle_active_group_handler.cpp  bundle_active_group_util.cpp  bundle_active_user_history.cpp
services/src/: bundle_active_service.cpp  bundle_active_stub.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/bundle_fuzzer/: BUILD.gn  bundle_active_event_fuzzer.cpp  bundle_active_event_vec_raw_data.h  bundle_fuzzer.h
test/fuzztest/bundleactivepackagestats_fuzzer/: BUILD.gn  bundleactivepackagestats_fuzzer.cpp  bundleactivepackagestats_fuzzer.h  project.xml
test/fuzztest/bundleactivepowerstatecallbackproxy_fuzzer/: BUILD.gn  bundleactivepowerstatecallbackproxy_fuzzer.cpp  bundleactivepowerstatecallbackproxy_fuzzer.h
test/unittest/: BUILD.gn  bundle_active_event_reporter_test.cpp  bundle_active_test_util.h  bundle_active_total_test.cpp  bundle_active_usage_database_test.cpp  device_usage_statistics_mock_test.cpp  device_usage_statistics_multi_test.cpp  device_usage_statistics_service_test.cpp  device_usage_statistics_test.cpp  package_usage_test.cpp
test/unittest/mock/: bundle_active_account_helper_mock.cpp  bundle_active_client_mock.cpp  bundle_active_core_mock.cpp  bundle_active_service_mock.cpp  bundle_active_usage_database_mock.cpp  bundle_active_user_history_mock.cpp  mock_service_registry.cpp
test/unittest/mock/include/: iservice_registry.h
tools/ohos-usageStatsQuery/: BUILD.gn  README.md  ohos-usageStatsQuery.json
utils/include/: bundle_active_log.h  bundle_active_util.h
utils/src/: bundle_active_util.cpp
(+104 files in other folders)
