# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("BundleActiveEventFuzzTest") {
  module_out_path = "device_usage_statistics/device_usage_statistics"
  
  # 配置路径指向当前目录
  fuzz_config_file = "//foundation/resourceschedule/device_usage_statistics/test/fuzztest/bundle_fuzzer"

  # 1. 既然头文件在本地，这里其实可以留空，或者保留这些以防万一依赖其他系统头文件
  include_dirs = [
    ".", # 当前目录
    "//foundation/resourceschedule/device_usage_statistics/interfaces/innerkits/include",
    "//foundation/resourceschedule/device_usage_statistics/services/common/include",
    "//foundation/resourceschedule/device_usage_statistics/utils/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  # 2. 【核心】直接编译当前目录下的两个 cpp 文件
  sources = [
    "bundle_active_event_fuzzer.cpp",
    "bundle_active_event_vec_raw_data.cpp", 
  ]

  # 3. 依赖库保持基本配置
  deps = [
    "//foundation/resourceschedule/device_usage_statistics:usagestatsinner_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "eventhandler:libeventhandler",
    "safwk:system_ability_fwk",
  ]
}