# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../device_usage_statistics.gni")

##############################fuzztest##########################################
module_output_path = "device_usage_statistics/device_usage_statistics"

ohos_fuzztest("BundleActivePackageStatsFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${usage_statistics_path}/test/fuzztest/bundleactivepackagestats_fuzzer"

  cflags = [
    "--coverage",
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  cflags_cc = [ 
     "--coverage",
     "-O0",
  ]
  ldflags = [ "--coverage" ]

  sources = [
    "bundleactivepackagestats_fuzzer.cpp",
  ]

  # 依赖当前模块的内部静态库，GN 会自动传递所需的大部分外部依赖
  deps = [
    "${usage_statistics_path}:usagestatservice_static",
  ]

  # 如果有需要单独补充的外部依赖（比如跨进程传递的 Parcel 或安全校验的 Token），可以在这里加
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [
    ":BundleActivePackageStatsFuzzTest",
  ]
}
###############################################################################